# cyberpunk_companion_api

./: .env  Cargo.toml  docker-compose.yaml  sqlx-data.json
.github/workflows/: code-quality.yml  test.yml
migrations/: 20220807161141_user.sql  20220913163712_stats.sql  20220914220213_players_account_links.sql  20220915115045_template.sql  20220924170411_computed_value.sql
src/: main.rs
src/controller/: account.rs
src/entities/: account.rs  mod.rs  players.rs  skills.rs  stats.rs
src/service/: account.rs  mod.rs  players.rs  skills.rs  skills_template.rs  stats.rs  stats_template.rs
src/utils/: auth.rs  config.rs  database.rs  errors.rs  mod.rs
