[package]
name = "cyberpunk_companion_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"
actix-web-httpauth = "0.8.0"
jwt = "0.16.0"
sqlx = "0.6.1"